# backend/routes/public.go
@@ -13,6 +13,9 @@ func registerPublicRoutes(routes *gin.RouterGroup, handler *handlers.PublicHandl
 	public.GET("/articles/:id", handler.GetArticle)
 	public.GET("/images", handler.ListImages)
 	public.GET("/resources", handler.ListResources)
+	public.GET("/dailies", handler.ListDailies)
+	public.GET("/dailies/:id", handler.GetDaily)
+	public.POST("/dailies", handler.CreateDaily)
 	public.GET("/files/:id/preview", handler.PreviewFile)
 	public.GET("/files/:id/thumbnail", handler.Thumbnail)
 	public.GET("/files/:id/medium", handler.MediumImage)
